# active-sbi

./: .gitignore  README.md  pyproject.toml
asbi/algorithms/: EnsembleFlow.py  acquisitions.py  nle.py  utils.py
asbi/experiments/: plot.py  run.py  utils.py
configs/: TWO_MOONS.yaml  bald.yaml  bald_comparison.yaml  comparison.yaml  test.yaml
notebooks/: Untitled.ipynb  Untitled1.ipynb  flow_entropy.ipynb  two_moons.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
notebooks/sbi-logs/NLE_A/2025-02-24T10_08_49.944469/: events.out.tfevents.1740388129.Haydens-MacBook-Pro.local.36671.0
notebooks/sbi-logs/NLE_A/2025-02-24T10_14_26.471680/: events.out.tfevents.1740388466.Haydens-MacBook-Pro.local.36671.1
notebooks/sbi-logs/NLE_A/2025-02-24T10_16_10.474711/: events.out.tfevents.1740388570.Haydens-MacBook-Pro.local.36671.2
notebooks/sbi-logs/NLE_A/2025-02-25T13_11_10.048140/: events.out.tfevents.1740485470.Haydens-MacBook-Pro.local.99820.0
notebooks/sbi-logs/NLE_A/2025-02-25T13_11_16.268226/: events.out.tfevents.1740485476.Haydens-MacBook-Pro.local.99820.1
notebooks/sbi-logs/NLE_A/2025-02-25T13_52_18.461904/: events.out.tfevents.1740487938.Haydens-MacBook-Pro.local.99820.2
scripts/: plotting.py  run.sh  run_experiment.py  run_experiments.py  submit_job_cpu.sh  submit_job_direct.sh  submit_job_gpu.sh
scripts/remote/: job_script_cpu.sh  job_script_gpu.sh  run_cpu.sh  run_gpu.sh
scripts/remote/python/: run_direct.sh  run_experiments.py
(+469 files in other folders)
