[project]
name = "asbi"
version = "0.1.0"
description = "Active learning for simulation-based inference"
authors = [
    {name = "Hayden Johnson", email = "haydenjohnson@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[[tool.poetry.packages]]
include = "asbi"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
